# ptiturl-gtk

./: com.github.ptiturl.ptiturlgtk.json  meson.build
data/: com.github.ptiturl.ptiturlgtk.appdata.xml.in  com.github.ptiturl.ptiturlgtk.desktop.in  com.github.ptiturl.ptiturlgtk.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  ptiturl-gtk.in  ptiturl_gtk.gresource.xml  window.py  window.ui
